# screamer-learner

./: CMakeLists.txt  README.md  clear.bat  clear.sh
jumpscare/: jumpscares.json
quiz/: testquiz.json  testquiz2 (3rd copy).json  testquiz2 (4th copy).json  testquiz2 (5th copy).json  testquiz2 (6th copy).json  testquiz2 (7th copy).json  testquiz2 (8th copy).json  testquiz2 (another copy).json  testquiz2 (copy).json  testquiz2.json
src/: fieldbutton.cpp  fieldbutton.h  jumpscare.cpp  jumpscare.h  main.cpp  mainmenu.cpp  mainmenu.h  options.cpp  options.h  question.cpp  question.h  quiz.cpp  quiz.h  quizselect.cpp  quizselect.h  quizstate.cpp  quizstate.h  random.h  state.h  style.h  textbutton.cpp  textbutton.h
